--- a/manifests/grafana-deployment.yaml
+++ b/manifests/grafana-deployment.yaml
@@ -20,7 +20,7 @@ spec:
     spec:
       containers:
       - env: []
-        image: grafana/grafana:7.3.5
+        image: mkellock/polrgrafana
         name: grafana
         ports:
         - containerPort: 3000
